syntax = "proto3";

option csharp_namespace = "Dotnet.Communication.gRPC.Server";

package auth;

service Auth {
  rpc SignUp (SignUpRequest) returns (SignUpReply);
}

message SignUpRequest {
  string email = 1;
  string password = 2;
}

message SignUpReply {
  bool success = 1;
  string email = 2;
}
